[gd_scene load_steps=7 format=3 uid="uid://bxqtdwvgrb53d"]

[ext_resource type="Theme" uid="uid://dqjnhgawjp3o2" path="res://game/windows/shape_selection_window_theme.tres" id="1_e8ho0"]
[ext_resource type="Shader" uid="uid://cqk5f2vm7fcd0" path="res://common/shaders/jitter_shader.gdshader" id="1_lifgb"]
[ext_resource type="Texture2D" uid="uid://bb1wr6jpwm3oe" path="res://common/sprites/Space Background (6).png" id="2_e8ho0"]
[ext_resource type="Script" uid="uid://ej750cb8id0u" path="res://game/windows/shape_selection_window.gd" id="2_i8n8p"]
[ext_resource type="PackedScene" uid="uid://b66tcgqv117fd" path="res://game/windows/shape_selection_button.tscn" id="4_yn6nj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i8n8p"]
resource_local_to_scene = true
shader = ExtResource("1_lifgb")
shader_parameter/shaking = true
shader_parameter/amplitude = 1.5
shader_parameter/noise_scale = 50.0
shader_parameter/noise_speed = 2.0

[node name="ShapeSelectionWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_e8ho0")
script = ExtResource("2_i8n8p")

[node name="TextureRectBackground" type="TextureRect" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_i8n8p")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_e8ho0")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="RichTextLabelTitle" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"RichTextLabelTitle"
text = "DECIDE YOUR FATE"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1

[node name="RichTextLabelTimer" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"RichTextLabelTimer"
text = "DECIDE YOUR FATE"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1

[node name="ShapeButtonHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 64
alignment = 1

[node name="ShapeSelectionButton" parent="MarginContainer/VBoxContainer/ShapeButtonHBoxContainer" instance=ExtResource("4_yn6nj")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ShapeSelectionButton2" parent="MarginContainer/VBoxContainer/ShapeButtonHBoxContainer" instance=ExtResource("4_yn6nj")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
shape = 1

[node name="ShapeSelectionButton3" parent="MarginContainer/VBoxContainer/ShapeButtonHBoxContainer" instance=ExtResource("4_yn6nj")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
shape = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 192)
layout_mode = 2
theme_override_constants/separation = 128
alignment = 1

[node name="ConfirmButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "CONFIRM FATE"

[node name="ConcedeButton" type="Button" parent="MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "RELINQUISH FATE"

[node name="SelectionTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 30.0
one_shot = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="timeout" from="SelectionTimer" to="." method="_on_selection_timer_timeout"]
